fixed problem on mobile responsive site

--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ p#poweredBy {
 		}
 
 	#firstTextBox {
-		margin-top: 0;
+		margin-top: 30px;
 	}
 
 	h2 {
